@@ -50,7 +50,8 @@
 #define WINDOW_NAME_LENGTH 35 /* Character length for the current window's name in the bar */
 
 static const char *defaultdesktopnames[] = { "1", "2", "3", "4", "5", "6", };
-static const char *defaultcolor[] = { "#ff0000", "#00ff00", "#0000ff", "#000000", "#ffffff", "#ffff00", "#ff00ff", "#f0f0f0", "#0f0f0f", };
+static const char *defaultbarcolor[] = { "#ff0000", "#00ff00", "#0000ff", "#000000", "#ffffff", "#ffff00", "#ff00ff", "#f0f0f0", "#0f0f0f", };
+static const char *defaultwincolor[] = { "#ff0000", "#00ff00", };
 static const char *defaultmodename[] = { "[0]", "[1]", "[2]", "[3]", "[4]", };
 static const char defaultfont[] = "-*-terminus-medium-r-*-*-12-*-*-*-*-*-*-*";
 
