@@ -1,12 +1,14 @@
 # lines starting with a hash are ignored
-# theme colours are : focused  window border and desktop in switcher
-#             unfocused  window border and desktop in switcher and bar background
+# bartheme colours are : focused desktop in switcher
+#             unfocused desktop in switcher and bar background
 #             unfocused desktop in switcher with opened windows
-#              the bars border
-#              the focused window name font in the status bar/also for external text
-#              the desktop switcher font/also for external text
-#              three more colours for the external text
-THEME #443311,#002030,#004050,#001020,#999999,#777755,#339933,#aa6644,#ffffff,
+#             the bars border
+#             the focused window name font in the status bar/also for external text
+#             the desktop switcher font/also for external text
+#             three more colours for the external text
+# windowtheme colours are : focused window border and unfocused window border
+BARTHEME #443311,#002030,#004050,#001020,#999999,#777755,#339933,#aa6644,#ffffff,
+WINDOWTHEME #443311,#002030,
 BORDERWIDTH 2
 MASTERSIZE 52
 ATTACHASIDE 1
